# kinect_recorder

./: CMakeLists.txt
src/: KinectRecorder.cpp  io.cpp  io.hpp
